crates/keron-lang/tests/corpus/errors/check/struct_default_required_after_default.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: required fields must come before defaulted fields
  --> 4:26
  |
4 | struct Bad { a: Int = 1, b: Int }
  |                          ^^^^^^^
